fixed overlapping

--- a/src/style_sheets/Project.css
+++ b/src/style_sheets/Project.css
@@ -7,7 +7,7 @@
    grid-row: 1/2;
    grid-template-columns: auto 3fr;
    color: #F8F8F8;
-   position: relative;
+   
    margin-left: 30px;
    margin-right: 10px;
    margin-top: -20px;
